--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -22,7 +22,7 @@
         }
 
         div#q2 {
-            background-image: radius-gradient(45deg, #0e0e0e, #8f0101);
+            background-image: linear-gradient(45deg, #0e0e0e, #8f0101);
         }
 
         div#q3 {
