--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,17 +6,26 @@
     <title>Document</title>
     <style>
         body {
-            height: 100vh;
+            height: 100vh; 
+            /*
             background-color: #000;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
+
+        /* SHORTHAND - background */
+        /* color, image, position, repear, [size], attachment */
+
 
         main {
             background-color: #fff;
-            width: 400px;
+            max-width: 400px;
             padding: 12px;
             margin: auto;
             border-radius: 12px;
@@ -30,6 +39,16 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus eveniet cupiditate quasi dolorum exercitationem? Id culpa repellat, sed tenetur autem dolorum quidem rem atque possimus, veniam magnam, doloribus dolor fuga! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur labore aliquid eligendi minus eum repudiandae beatae voluptas in illum architecto! Voluptatem eaque odit et voluptates minus iusto excepturi officia placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur fuga reprehenderit, qui animi consequatur magnam ducimus incidunt quod adipisci dolor, voluptates sequi, nobis quidem repellat praesentium. Obcaecati sunt quae ducimus?
+        </p>
+         <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus eveniet cupiditate quasi dolorum exercitationem? Id culpa repellat, sed tenetur autem dolorum quidem rem atque possimus, veniam magnam, doloribus dolor fuga! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur labore aliquid eligendi minus eum repudiandae beatae voluptas in illum architecto! Voluptatem eaque odit et voluptates minus iusto excepturi officia placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur fuga reprehenderit, qui animi consequatur magnam ducimus incidunt quod adipisci dolor, voluptates sequi, nobis quidem repellat praesentium. Obcaecati sunt quae ducimus?
+        </p>
+         <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus eveniet cupiditate quasi dolorum exercitationem? Id culpa repellat, sed tenetur autem dolorum quidem rem atque possimus, veniam magnam, doloribus dolor fuga! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur labore aliquid eligendi minus eum repudiandae beatae voluptas in illum architecto! Voluptatem eaque odit et voluptates minus iusto excepturi officia placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur fuga reprehenderit, qui animi consequatur magnam ducimus incidunt quod adipisci dolor, voluptates sequi, nobis quidem repellat praesentium. Obcaecati sunt quae ducimus?
+        </p> <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus eveniet cupiditate quasi dolorum exercitationem? Id culpa repellat, sed tenetur autem dolorum quidem rem atque possimus, veniam magnam, doloribus dolor fuga! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur labore aliquid eligendi minus eum repudiandae beatae voluptas in illum architecto! Voluptatem eaque odit et voluptates minus iusto excepturi officia placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur fuga reprehenderit, qui animi consequatur magnam ducimus incidunt quod adipisci dolor, voluptates sequi, nobis quidem repellat praesentium. Obcaecati sunt quae ducimus?
+        </p> <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus eveniet cupiditate quasi dolorum exercitationem? Id culpa repellat, sed tenetur autem dolorum quidem rem atque possimus, veniam magnam, doloribus dolor fuga! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur labore aliquid eligendi minus eum repudiandae beatae voluptas in illum architecto! Voluptatem eaque odit et voluptates minus iusto excepturi officia placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur fuga reprehenderit, qui animi consequatur magnam ducimus incidunt quod adipisci dolor, voluptates sequi, nobis quidem repellat praesentium. Obcaecati sunt quae ducimus?
         </p>
     </main>
